--- a/src/components/ChangeLang/style.module.css
+++ b/src/components/ChangeLang/style.module.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 50px;
   height: 50px;
-  margin: 0 auto;
+  margin: auto 2vmin;
   border-radius: 50%;
   align-self: center;
 }
